package com.directi.training.dip.exercise.refactored;

public interface Reader {
    String read() ;
}
