package com.directi.training.dip.exercise.refactored;

public interface Writer {
    int write(String content);
}
